<resources>
    <string name="app_name">Post2Shop</string>
    <string name="action_settings">Settings</string>
    <string name="Post_hint">Post</string>
    <string name="Category_hint">Category</string>
    <string name="SubCategory_hint">Sub Category</string>
    <string name="Pincode_hint">Pincode</string>
    <string name="Btn_Post">Post</string>
    <string name="Btn_Signup">Sign up</string>
    <string name="logo">logo</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="StoreName">Store Name</string>
    <string name="AddressLine1">Address Line 1</string>
    <string name="AddressLine2">Address Line 2</string>
    <string name="City">City</string>
    <string name="State">State</string>
    <string name="PostalCode">Postal Code</string>
    <string name="Country">Country</string>
    <string name="hi_customer">Abhishek DV</string>
    <string-array name="category_array">
        <item>Electronics</item>
        <item>Men</item>
        <item>Women</item>
        <item>BabyandKids</item>
        <item>HomeAndKitchen</item>

    </string-array>
    <string-array name="subcategory_array">
        <item>Mobiles</item>
        <item>Tablets</item>
        <item>Cameras</item>
        <item>Mobile Accesories</item>
        <item>T Shirts</item>
    </string-array>
</resources>
