<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/hi_customer"
        android:textColor="#daa859"
        android:focusableInTouchMode="false"
        android:textStyle="bold"
        android:layout_marginTop="40dp"/>

    <EditText
        android:id="@+id/post"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Post_hint"
        android:layout_marginTop="10dip"/>
    <Spinner
        android:id="@+id/category_spinner"
        android:gravity="start"
        android:layout_width="180dip"
        android:text="Left"
        android:overlapAnchor="false"
        android:layout_height="50dip"
        android:layout_gravity="left" />
    <Spinner
        android:id="@+id/subcategory_spinner"
        android:layout_width="180dip"
        android:text="Right"
        android:hint="@string/SubCategory_hint"
        android:overlapAnchor="false"
        android:layout_height="50dip"
        android:drawable="@android:color/primary_text_light"

        android:paddingRight="16dp"
        android:layout_gravity="right"
        android:layout_marginTop="-50dp" />
    <EditText
        android:id="@+id/pincode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Pincode_hint"
        android:inputType="text" />

    <Button
        android:id="@+id/btnpost"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/Btn_Post"
        android:layout_marginTop="0dp"
        android:background="#FF4081"
        android:textColor="#ffff"
        android:onClick="SelfDestruct"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="15dp"
        android:layout_gravity="right" />
    <android.support.design.widget.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="?attr/colorPrimary"
        android:elevation="6dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/tab_layout"/>
</LinearLayout>